--- a/volcano_plot/html_data/index.css
+++ b/volcano_plot/html_data/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Noto Sans', sans-serif;
 }
-
+/* 
 .axis path,
 .tick line,
 .tick text {
@@ -20,7 +20,7 @@ body {
     font-size: 12px;
 }
 
-/* Significance threshold line */
+//Significance threshold line 
 .threshold {
     stroke: #333;
     stroke-dasharray: 5px 10px;
@@ -28,7 +28,7 @@ body {
 }
 
 .dot {
-    /*pointer-events: all;*/
+    //pointer-events: all;
     fill: #666;
     stroke: none;
     opacity: 0.4;
@@ -53,7 +53,7 @@ body {
     pointer-events: all;
 }
 
-/*Add clip path for dots and threshold lines to ensure they arent drawn if outside the clip box*/
+//Add clip path for dots and threshold lines to ensure they arent drawn if outside the clip box
 .circlesContainer {
     clip-path: url(#clip);
 }
@@ -77,7 +77,7 @@ body {
     content: " ";
     position: absolute;
     top: 14%;
-    right: 100%; /* To the left of the tooltip */
+    right: 100%; //To the left of the tooltip 
     margin-top: -5px;
     border-width: 5px;
     border-style: solid;
@@ -100,4 +100,4 @@ body {
 #resetBtn:hover {
     color: #000;
     cursor: pointer;
-}
+} */
